syntax = "proto3";

package broker;

option go_package = "/broker";

service BrokerService {
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse);
}

message PublishRequest {
  string topic = 1;
  string body = 2;
}

message PublishResponse {
  string status = 1;
}

message SubscribeRequest {
  string topic = 1;
}

message SubscribeResponse {
  string topic = 1;
  string body = 2;
}
